✨ feat(格式化项目):

--- a/src/components/dashboard/styles/menu.less
+++ b/src/components/dashboard/styles/menu.less
@@ -1,128 +1,120 @@
-.ivu-shrinkable-menu{
-	height: 100%;
-	width: 100%;
+.ivu-shrinkable-menu {
+  height: 100%;
+  width: 100%;
 }
-.icon{
-	width: 16px;
-	height: 13px;
-	display: inline-block;
-	background-size: 13px 13px !important;
-	margin-top: 4px;
-	margin-right: 9px;
+
+.icon {
+  width: 16px;
+  height: 13px;
+  display: inline-block;
+  background-size: 13px 13px !important;
+  margin-top: 4px;
+  margin-right: 9px;
 }
-.icon-index{
-	background:url('images/ic_menu_home.png') no-repeat;
+
+.icon-index,
+.icon-indexs {
+  background: url("images/ic_menu_home.png") no-repeat;
 }
-.icon-indexs{
-	background:url('images/ic_menu_home.png') no-repeat;
+
+.icon-shop {
+  background: url("images/shop.png") no-repeat;
 }
-.icon-shop{
-	background:url('images/shop.png') no-repeat;
+
+.icon-shops {
+  background: url("images/shops.png") no-repeat;
 }
-.icon-shops{
-	background:url('images/shops.png') no-repeat;
+
+.icon-checking,
+.icon-checkings {
+  background: url("images/ic_menu_stock.png") no-repeat;
 }
-.icon-checkings{
-	background:url('images/ic_menu_stock.png') no-repeat;
+
+.icon-store,
+.icon-stores {
+  background: url("images/ic_menu_stock.png") no-repeat;
 }
-.icon-checking{
-	background:url('images/ic_menu_stock.png') no-repeat;
+
+.icon-good,
+.icon-goods {
+  background: url("images/ic_menu_product.png") no-repeat;
 }
-.icon-store{
-	background:url('images/ic_menu_stock.png') no-repeat;
+
+.icon-order,
+.icon-orders {
+  background: url("images/ic_menu_order.png") no-repeat;
 }
-.icon-stores{
-	background:url('images/ic_menu_stock.png') no-repeat;
+
+.icon-delivery,
+.icon-deliverys {
+  background: url("images/ic_menu_delivery.png") no-repeat;
 }
-.icon-good{
-	background:url('images/ic_menu_product.png') no-repeat;
+
+.icon-cashier,
+.icon-cashiers {
+  background: url("images/ic_menu_cashier.png") no-repeat;
 }
-.icon-goods{
-	background:url('images/ic_menu_product.png') no-repeat;
+
+.icon-money,
+.icon-moneys {
+  background: url("images/ic_menu_accounts.png") no-repeat;
 }
-.icon-order{
-	background:url('images/ic_menu_order.png') no-repeat;
+
+.icon-erp,
+.icon-erps {
+  background: url("images/ic_menu_erp.png") no-repeat;
 }
-.icon-orders{
-	background:url('images/ic_menu_order.png') no-repeat;
+
+.icon-member,
+.icon-members {
+  background: url("images/ic_menu_member.png") no-repeat;
 }
-.icon-deliverys{
-	background:url('images/ic_menu_delivery.png') no-repeat;
+
+.icon-marketing,
+.icon-marketings {
+  background: url("images/ic_menu_market.png") no-repeat;
 }
-.icon-delivery{
-	background:url('images/ic_menu_delivery.png') no-repeat;
+
+.icon-supply,
+.icon-supplys {
+  background: url("images/ic_menu_supply.png") no-repeat;
 }
-.icon-cashiers{
-	background:url('images/ic_menu_cashier.png') no-repeat;
+
+.icon-account,
+.icon-accounts {
+  background: url("images/ic_menu_accounts.png") no-repeat;
 }
-.icon-cashier{
-	background:url('images/ic_menu_cashier.png') no-repeat;
+
+.icon-marketing {
+  background: url("images/marketing.png") no-repeat;
 }
-.icon-money{
-	background:url('images/ic_menu_accounts.png') no-repeat;
+
+.icon-marketings {
+  background: url("images/marketings.png") no-repeat;
 }
-.icon-moneys{
-	background:url('images/ic_menu_accounts.png') no-repeat;
+
+.icon-set,
+.icon-sets {
+  background: url("images/ic_menu_setting.png") no-repeat;
 }
-.icon-erps{
-	background:url('images/ic_menu_erp.png') no-repeat;
-}
-.icon-erp{
-	background:url('images/ic_menu_erp.png') no-repeat;
-}
-.icon-members{
-	background:url('images/ic_menu_member.png') no-repeat;
-}
-.icon-member{
-	background:url('images/ic_menu_member.png') no-repeat;
-}
-.icon-marketings{
-	background:url('images/ic_menu_market.png') no-repeat;
-}
-.icon-marketing{
-	background:url('images/ic_menu_market.png') no-repeat;
-}
-.icon-supplys{
-	background:url('images/ic_menu_supply.png') no-repeat;
-}
-.icon-supply{
-	background:url('images/ic_menu_supply.png') no-repeat;
-}
-.icon-account{
-	background:url('images/ic_menu_accounts.png') no-repeat;
-}
-.icon-accounts{
-	background:url('images/ic_menu_accounts.png') no-repeat;
-}
-.icon-marketing{
-	background:url('images/marketing.png') no-repeat;
-}
-.icon-marketings{
-	background:url('images/marketings.png') no-repeat;
-}
-.icon-set{
-	background:url('images/ic_menu_setting.png') no-repeat;
-}
-.icon-sets{
-	background:url('images/ic_menu_setting.png') no-repeat;
-}
-.main .ivu-menu-item{
-	padding: 9px 18px!important;
-	color:#f7f7f7;
+
+.main .ivu-menu-item {
+  padding: 9px 18px !important;
+  color: #f7f7f7;
 }
 
 ::-webkit-scrollbar {
-	width: 2px;
-	height: 8px;
-	background-color: rgba(122,122,122,0.02);
+  width: 2px;
+  height: 8px;
+  background-color: rgb(122 122 122 / 2%);
 }
 
 /* 滚动槽 */
 ::-webkit-scrollbar-track {
-	border-radius:8px;
-	background-color: transparent;
+  border-radius: 8px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #bbbbbb;
+  background-color: #bbb;
 }
